tests/base/valid/VarDecl_Valid_1.whiley
import whiley.lang.*:*

void System::main([string] args):
    x = 1
    this.out.println(str(x))
