tests/base/invalid/DefiniteAssign_CompileFail_4.whiley
import whiley.lang.*:*

void System::f(string a):
    this.out.println(a)

void System::main([string] args):
    this.out.println("HELLO")
    x.f("WORLD")
